WebKit/win/WebContextMenuClient.cpp
@@ -54,6 +54,49 @@ void WebContextMenuClient::contextMenuDestroyed()
     delete this;
 }
 
+static bool isPreInspectElementTagSafari(IWebUIDelegate* uiDelegate)
+{
+    if (!uiDelegate)
+        return false;
+
+    // We assume anyone who implements IWebUIDelegate2 also knows about the Inspect Element item.
+    COMPtr<IWebUIDelegate2> uiDelegate2;
+    if (SUCCEEDED(uiDelegate->QueryInterface(IID_IWebUIDelegate2, (void**)&uiDelegate2)))
+        return false;
+
+    TCHAR modulePath[MAX_PATH];
+    DWORD length = ::GetModuleFileName(0, modulePath, _countof(modulePath));
+    if (!length)
+        return false;
+
+    return String(modulePath, length).endsWith("Safari.exe", false);
+}
+
+static HMENU fixMenuReceivedFromOldSafari(IWebUIDelegate* uiDelegate, ContextMenu* originalMenu, HMENU menuFromClient)
+{
+    ASSERT_ARG(menu, menu);
+    if (!isPreInspectElementTagSafari(uiDelegate))
+        return menuFromClient;
+
+    int count = ::GetMenuItemCount(originalMenu->platformDescription());
+    if (count < 1)
+        return menuFromClient;
+
+    if (::GetMenuItemID(originalMenu->platformDescription(), count - 1) != WebMenuItemTagInspectElement)
+        return menuFromClient;
+
+    count = ::GetMenuItemCount(menuFromClient);
+    if (count < 1)
+        return menuFromClient;
+
+    if (::GetMenuItemID(menuFromClient, count - 1) == WebMenuItemTagInspectElement)
+        return menuFromClient;
+
+    originalMenu->setPlatformDescription(menuFromClient);
+    originalMenu->addInspectElementItem();
+    return originalMenu->platformDescription();
+}
+
 HMENU WebContextMenuClient::getCustomMenuFromDefaultItems(ContextMenu* menu)
 {
     COMPtr<IWebUIDelegate> uiDelegate;
@@ -68,8 +111,7 @@ HMENU WebContextMenuClient::getCustomMenuFromDefaultItems(ContextMenu* menu)
     // FIXME: We need to decide whether to do the default before calling this delegate method
     if (FAILED(uiDelegate->contextMenuItemsForElement(m_webView, propertyBag.get(), (OLE_HANDLE)(ULONG64)menu->platformDescription(), (OLE_HANDLE*)&newMenu)))
         return menu->platformDescription();
-
-    return newMenu;
+    return fixMenuReceivedFromOldSafari(uiDelegate.get(), menu, newMenu);
 }
 
 void WebContextMenuClient::contextMenuItemSelected(ContextMenuItem* item, const ContextMenu* parentMenu)
